--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!--start header-->
@@ -62,6 +63,36 @@
                     </div>
                 </div>
             
+            <div class="cards">
+                <div class="cards-row">
+                    <div class="card">
+                        <img class="card-img" src="images/p1.png">
+                        <div class="card-body">
+                            <h3 class="card-title">The Upper Eye</h3>
+                            <div class="card-text">Who are in extremely love with eco friendly system</div>
+                            <div class="card-button">
+                                <a class="card-link" href="#">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cards">
+                <div class="cards-row">
+                    <div class="card">
+                        <img class="card-img" src="images/p1.png">
+                        <div class="card-body">
+                            <h3 class="card-title">The Upper Eye</h3>
+                            <div class="card-text">Who are in extremely love with eco friendly system</div>
+                            <div class="card-button">
+                                <a class="card-link" href="#">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="cards">
                 <div class="cards-row">
                     <div class="card">
