--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="flex_training.css">
 </head>
 <body>
     <!--start header-->
     <header class="header">
-
+        <div class="header-row">
         <!--start block logo-->
         <div class="header-logo">
             <img class="logo-img" src="images/logo.png">
@@ -32,7 +33,7 @@
             </ul>
         </div>
         <!--end block menu-->
-
+        </div>
     </header>
     <!--end header-->
 
@@ -75,11 +76,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <div class="cards">
-                <div class="cards-row">
                     <div class="card">
                         <img class="card-img" src="images/p1.png">
                         <div class="card-body">
@@ -90,11 +87,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <div class="cards">
-                <div class="cards-row">
                     <div class="card">
                         <img class="card-img" src="images/p1.png">
                         <div class="card-body">
